# ffmpeg_cuda

./: .gitignore  ffmpeg编译脚本.md
demo1/: CMakeLists.txt  Makefile  main  main.cpp  make.sh
demo2/: CMakeLists.txt  Makefile  main  main.cpp  main2.cpp  main2_opencv.cpp  make.sh
demo2/opencv_test/: CMakeLists.txt  opencv_test.cpp
