CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(main)

SET(lib_path "/opt/ffmpeg/build/lib")
SET(inc_path "/opt/ffmpeg/build/include")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-D__STDC_CONSTANT_MACROS")
# link_directories(${lib_path})

FIND_PATH(AVCODEC_INCLUDE_DIR  avcodec.h ${inc_path}/libavcodec NO_DEFAULT_PATH)
MESSAGE(AVCODEC_INCLUDE_DIR:${AVCODEC_INCLUDE_DIR})
FIND_LIBRARY(AVCODEC_LIBRARY avcodec ${lib_path})
MESSAGE(AVCODEC_LIBRARY:${AVCODEC_LIBRARY})

find_path(AVFORMAT_INCLUDE_DIR  avformat.h  ${inc_path}/libavformat NO_DEFAULT_PATH)
MESSAGE(AVFORMAT_INCLUDE_DIR:${AVFORMAT_INCLUDE_DIR})
FIND_LIBRARY(AVFORMAT_LIBRARY avformat ${lib_path})
MESSAGE(AVFORMAT_LIBRARY:${AVFORMAT_LIBRARY})

find_path(AVUTIL_INCLUDE_DIR avutil.h ${inc_path}/libavutil NO_DEFAULT_PATH)
MESSAGE(AVUTIL_INCLUDE_DIR:${AVUTIL_INCLUDE_DIR})
FIND_LIBRARY(AVUTIL_LIBRARY avutil ${lib_path})
MESSAGE(AVUTIL_LIBRARY:${AVUTIL_LIBRARY})

find_path(AVDEVICE_INCLUDE_DIR  avdevice.h ${inc_path}/libavdevice NO_DEFAULT_PATH)
MESSAGE(AVDEVICE_INCLUDE_DIR:${AVDEVICE_INCLUDE_DIR})
FIND_LIBRARY(AVDEVICE_LIBRARY avdevice ${lib_path})
MESSAGE(AVDEVICE_LIBRARY:${AVDEVICE_LIBRARY})

ADD_EXECUTABLE(main main.cpp )

TARGET_INCLUDE_DIRECTORIES(main PRIVATE ${AVCODEC_INCLUDE_DIR} ${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${AVDEVICE_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(main PRIVATE ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY} ${AVUTIL_LIBRARY} ${AVDEVICE_LIBRARY})
